Members Dropdown UI - Fixed it going out of screen when a lot of members are available

--- a/src/Components/assets/css/common/misc.css
+++ b/src/Components/assets/css/common/misc.css
@@ -1863,7 +1863,7 @@ input[type=number] {
     background: rgba(75, 78, 99, 0.102);
     padding: 20px;
     border-radius: 10px;
-   height: calc(100vh - 165px);
+    height: calc(100vh - 165px);
 }
 
 .badge-solid-primary {
@@ -2452,4 +2452,9 @@ input[type=number] {
     width: 100%;
     border-radius: 6px;
     padding-inline: 10px;
+}
+
+.tippy-content>div {
+    max-height: 300px;
+    overflow-y: auto;
 }
